RESOLVED FIXED193276
REGRESSION(r239156): [FreeType] fixed width, and synthetic bold/italic not correctly applied since r239156
https://bugs.webkit.org/show_bug.cgi?id=193276
Summary REGRESSION(r239156): [FreeType] fixed width, and synthetic bold/italic not co...
Carlos Garcia Campos
Reported 2019-01-09 02:15:57 PST
FontCache::createFontPlatformData() is calling getFontPropertiesFromPattern() with the configure pattern instead of the result one after the match. This is causing several layout test failures like: https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r239762%20(9317)/fast/css3-text/font-synthesis-diffs.html
Attachments
Patch (1.70 KB, patch)
2019-01-09 02:41 PST, Carlos Garcia Campos
no flags
Patch (1.70 KB, patch)
2019-01-09 02:58 PST, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2019-01-09 02:41:11 PST
Carlos Garcia Campos
Comment 2 2019-01-09 02:58:55 PST
Carlos Garcia Campos
Comment 3 2019-01-09 04:39:32 PST
Radar WebKit Bug Importer
Comment 4 2019-01-09 04:40:30 PST
Note You need to log in before you can comment on or make changes to this bug.