REGRESSION(r239156): [FreeType] fixed width, and synthetic bold/italic not correctly applied since r239156 https://bugs.webkit.org/show_bug.cgi?id=193276

Reviewed by Žan Doberšek.

FontCache::createFontPlatformData() is calling getFontPropertiesFromPattern() with the configure pattern instead
of the result one after the match.

* platform/graphics/freetype/FontCacheFreeType.cpp:
(WebCore::FontCache::createFontPlatformData):

Canonical link: https://commits.webkit.org/207776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239768 268f45cc-cd09-0410-ab3c-d52691b4dbfc